[package]
name = "pic8259"
version = "0.10.0"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "Abstractions for the 8259 and 8259A interrupt controllers"
repository = "https://github.com/rust-osdev/pic8259"
readme = "README.md"
keywords = ["no_std", "kernel", "interrupts"]
license = "Apache-2.0/MIT"

[dependencies]
x86_64 = { version = "0.14.2", default-features = false, features = ["instructions", "inline_asm"] }
